# UVA-GPS-Denied-Navigation-in-Dynamic-Environments

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  LICENSE  NOTICE  PERFORMANCE_REPORT.md  README.md  RESEARCH_RELEASE.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  docker-compose.production.yml  docker-compose.simulation.yml  docker-compose.yml  final_review.md  go.mod  main.py  python_deps_ok  requirements.txt  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  nightly.yml  phase10-enterprise-validation.yml  release-validation.yml  release.yml  security.yml
build-check/: CMakeCache.txt
build-check2/: CMakeCache.txt
build-full/: CMakeCache.txt
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  DroneSwarmSensorFusionConfig.cmake.in  Sanitizers.cmake  jetson_toolchain.cmake
cmd/control-plane/: hardening_test.go  main.go
config/: anchors.example.json  anchors.json  detector_labels.example.json  lidar.example.json  lidar.json  runtime.example.json  runtime.json  swarm_edge_protocol.example.json  swarm_edge_protocol.json
config/schema/: anchors.schema.json
data/dashboard/: dashboard.sqlite3
datasets/: README.md
datasets/autonomy/: README.md
datasets/benchmark/: README.md  metadata_schema.json
datasets/estimator/: phase15_stationary_replay.json
deployment/: __init__.py
deployment/compose/: control-plane.secrets.env.template  docker-compose.production.yml
deployment/docker/: Dockerfile.production
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.template.yaml  service.yaml
deployment/monitoring/: grafana-control-plane-dashboard.json  prometheus.yml
deployment/scripts/: __init__.py  common.py  phase10_backup_restore.py  phase10_security_audit.py  phase10_validate_cicd.py  phase10_validate_deployment.py  phase10_validate_kubernetes.py  phase10_validate_monitoring.py  phase10_validate_reliability.py  phase10_validate_scalability.py  validate_environment.py
docs/: BENCH_ACCEPTANCE_TEST_PLAN.md  DASHBOARD_SENSOR_TELEMETRY_SCHEMA.md  EDGE_AI_WORKFLOW.md  EDGE_FAILSAFE_STRATEGY.md  EDGE_NODE_PIPELINE.md  EDGE_PEER_PACKET_PROTOCOL.md  EDGE_SWARM_ARCHITECTURE.md  EDGE_SWARM_HIL_TEST_PLAN.md  EDGE_SWARM_PERFORMANCE_ESTIMATE.md  EDGE_SWARM_RESEARCH_NOTES.md  FULL_LOCAL_VALIDATION_REPORT.md  GO_SWARM_ARCHITECTURE.md  GPS_DENIED_OPERATION_TEST_REPORT.md  LIFECYCLE_INDEX.md  LOCAL_BUILD_AND_BENCH_DEMO_GUIDE.md  ONBOARD_SENSOR_TELEMETRY_PUBLISHER.md  PHASE_INDEX.md  POST_QUANTUM_SWARM_SECURITY_ROADMAP.md  PRODUCTION_READINESS_UPGRADE_PLAN.md  QA_GPS_DENIED_FLIGHT_READINESS_REPORT.md  SWARM_LATENCY_OPTIMIZATION.md  TETHERED_FLIGHT_ACCEPTANCE_GATE.md
docs/ai-autonomy-intelligent-decision-layer/: AI_ARCHITECTURE_REPORT.md  AI_BENCHMARK_REPORT.md  AI_MODEL_INTERFACE.md  AI_SAFETY_REPORT.md  BENCHMARK_RESULTS.md  FINAL_REPORT.md  MISSION_PLANNING_REPORT.md  PERCEPTION_REPORT.md  RESEARCH_READINESS_REPORT.md  SWARM_INTELLIGENCE_REPORT.md  VALIDATION_REPORT.md  ai_benchmark_results.json  perception_results.json
docs/architecture-safety-validation-hardening/: ARCHITECTURE_REVIEW.md  BENCHMARK_REPORT.md  CODE_QUALITY_REPORT.md  CONFIGURATION_REVIEW.md  HIL_READINESS_REPORT.md  LOCK_ORDER_POLICY.md  LOGGING_REVIEW.md  MEMORY_AUDIT.md  PERFORMANCE_REPORT.md  RACE_DETECTION_REPORT.md  REPRODUCIBILITY_REPORT.md  RESEARCH_VALIDATION.md  SANITIZER_REPORT.md  SOFTWARE_RESEARCH_VALIDATION.md  THREAD_SAFETY_REPORT.md  VALGRIND_REPORT.md  benchmark_results.json
docs/assets/: README.md
docs/benchmarks/: README.md  edge_swarm_benchmark_mock_data.json
docs/build-system-cross-platform-validation/: BUILD_SYSTEM_AUDIT.md  COMPILER_WARNING_REPORT.md  FINAL_REPORT.md  LINUX_BUILD_REPORT.md  REPRODUCIBILITY_REPORT.md  SANITIZER_REPORT.md  WINDOWS_BUILD_REPORT.md  local_validate_linux_report.json  local_validate_report.json
docs/ci-cd-control-plane-orchestration/: CICD_REPORT.md
experiments/: README.md  phase7-20260716T191105Z.json  phase7-20260716T191134Z.json  phase7-20260716T194851Z.json  phase7-20260717T063415Z.json  phase7-20260717T073520Z.json  phase7_metadata_schema.json
gui/: backend_status.py  dashboard.py  dashboard_contract.py  operator_console.py
results/: README.md
scripts/: audit_workflows.py  bench_check.py  check_clang_format.py  check_gofmt.py  drone_setup.py  generate_firmware_manifest.py  generate_native_coverage.py  generate_tls_certs.py  local_validate.py  package_consumer_smoke.py  phase11_ai_evaluation.py  phase11_digital_twin.py  phase11_multi_agent.py  phase11_rl_framework.py  phase11_xai.py  phase15_estimator_replay.py  phase16_benchmark_aggregate.py  phase4_benchmark_suite.py  phase4_config_audit.py  phase6_performance_benchmark.py  phase6_performance_suite.py  phase6_soak_monitor.py  phase6_stress_test.py  phase7_failure_injection.py  phase7_hil_runner.py  phase7_mission_scenarios.py  phase7_simulation_runner.py  phase8_advanced_scenarios.py  phase9_ai_benchmark.py  phase9_ai_safety_test.py  phase9_mission_planner.py  phase9_perception_validation.py  phase9_swarm_intelligence.py  pre_arm_check.py  production_telemetry_smoke_test.py  run_clang_tidy.py  telemetry_smoke_test.py  validate_config_schemas.py
simulation/: __init__.py  fault_injector.py  mission_executor.py  sensor_models.py  vehicle_state.py
src/: drone_bridge.cpp  main.cpp
tests/: CMakeLists.txt  test_autonomy.cpp  test_boot_trust.cpp  test_dashboard_backend_status.py  test_edge_swarm.cpp  test_ekf.cpp  test_estimator_replay.cpp  test_estimator_shadow.cpp  test_navigation_intelligence.cpp  test_sensors.cpp  test_slam.cpp  test_swarm_security.cpp  test_telemetry.cpp  test_v2x.cpp
tools/: estimator_replay_runner.cpp  estimator_shadow_benchmark.cpp
(+444 files in other folders)
